fix: remove extra margin when findbar and dev panel are open

--- a/chrome/browser/mics.css
+++ b/chrome/browser/mics.css
@@ -18,6 +18,12 @@ splitter.devtools-horizontal-splitter {
     margin-top: var(--user-panel-gap) !important;
 }
 
+#main-window:has(
+    .browserContainer > findbar:not([hidden])
+) .devtools-toolbox-bottom-iframe {
+    margin-top: 0px !important;
+}
+
 .devtools-toolbox-side-iframe {
     border-radius: var(--user-radius) !important;
 
@@ -72,3 +78,8 @@ splitter.devtools-horizontal-splitter {
     margin: var(--user-panel-gap) !important;
 }
 
+
+
+.findbar-textbox {
+    border-radius: var(--user-radius) !important;
+}
